
  - In docstrings for interactive commands and user configurable
    variables, \\[command-name] is now expanded to a key-binding for
    `command-name` by "\C-hf", "\C-hv" etc.  just like Emacs. For
    example, see the documentation for `start-kbd-macro` and
    `end-kbd-macro`.

  - `describe-function` now shows bound keys and function signatures
    in displayed help text.

  - New `*Messages*` buffer accumulates minibuf messages.

*** Zz

  - A new editor, currently heavily based on Zmacs, but with the zlisp
    evaluator removed in favour of direct Lua evaluation.

** Bug fixes

 - zmacs 'universal-argument' guards against non-ASCII keys, so you
   can execute a key sequences like "\M-35\RIGHT" without inducing a
   "char out of range" crash.


* Noteworthy changes in release 3 (2013-09-25) [alpha]

** Bug fixes

  Arrow keys work properly when resuming from M-x debug.


* Noteworthy changes in release 2.5.0.50 (2011-09-20) [alpha]

** Bug fixes

  Many bugs have been fixed.

** Build-related

  Many bugs have been fixed. Building against the required Lua
  libraries has been simplified; the required libraries can now all be
  installed as LuaRocks.

  Since C development has now been moved to the 2.4 series, the Lua
  series is now numbered 2.5.x.


* Noteworthy changes in release 2.4.0.50 (2011-05-04) [alpha]

** Bug fixes

  Many bugs have been fixed.

** Build-related

  The build system is now non-recursive (thanks to Gary Vaughan).


* Noteworthy changes in release 2.4.2 (2011-10-03) [stable]

** Bug fixes

  Fix a basic performance bug introduced in 2.4.0.60.

** Build-related

  Don't enable Valgrind by default, and explain that correct
  suppressions are needed to use it successfully.


* Noteworthy changes in release 2.3.24 (2011-04-29) [stable]

** Bug fixes

  Fix kill-line with prefix argument.

  Fix a cosmetic problem with multiple ESC-digit combinations.

  Use gnulib’s mkstemp to avoid problems on some platforms.
