@@ -18,6 +18,12 @@
 ;; along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 
+(defvar message-log-max 1000
+  "Maximum number of lines to keep in the message log buffer.
+If nil, disable message logging.  If t, log messages but don't truncate
+the buffer when it becomes large.")
+
+
 (defun message (string)
   "Display a message at the bottom of the screen.
 
